--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0",
-    "react-sparklines": "^1.7.0"
+    "react-sparklines": "^1.7.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
